--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '0 0 * * 1' # At 00:00 on Monday
+    - cron: '0 12 * * *' # At 12:00 every day
 
 jobs:
   build:
@@ -24,7 +24,8 @@ jobs:
           
       - name: execute py script # run main.py
         env:
-          SOME_SECRET: ${{ secrets.SOME_SECRET }}
+          API_KEY1 : ${{ secrets.API_KEY1 }}
+          API_KEY2 : ${{ secrets.API_KEY2 }}
         run: python main.py
           
       - name: commit files
